fixed progress bar spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,19 @@
 :root {
-  --identity-primary: #dc0a2d;
-
   --grayscale-dark: #212121;
-  --grayscale-medium: #666666;
   --grayscale-light: #e0e0e0;
-  --grayscale-background: #efefef;
   --grayscale-white: #ffffff;
-
   --headline-font-size: 24px;
-  --body1-font-size: 14px;
   --body2-font-size: 12px;
   --body3-font-size: 10px;
-  --subtitle1-font-size: 14px;
-  --subtitle2-font-size: 12px;
-  --subtitle3-font-size: 10px;
   --caption-font-size: 8px;
-
   --headline-line-height: 32px;
   --common-line-height: 16px;
   --caption-line-height: 12px;
-
   --font-weight-regular: 400;
   --font-weight-bold: 700;
-
-  --drop-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.2);
-  --drop-shadow-hover: 0px 3px 12px 3px rgba(0, 0, 0, 0.2);
-  --drop-shadow-inner: 0px 1px 3px 1px rgba(0, 0, 0, 0.25) inset;
 }
 
-h2,
 h3,
-h4,
-.body1-fonts,
 .body2-fonts,
 .body3-fonts {
   line-height: var(--common-line-height);
@@ -40,10 +22,6 @@ h4,
 h1 {
   font-size: var(--headline-font-size);
   line-height: var(--headline-line-height);
-}
-
-h2 {
-  font-size: var(--subtitle1-font-size);
 }
 
 h3 {
@@ -80,16 +58,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.pokemon-list {
-  background-color: var(--grayscale-white);
-  box-shadow: var(--drop-shadow-inner);
-  border-radius: 0.75rem;
-  min-height: calc(85.5% - 1rem);
-  width: calc(100% - 1rem);
-  max-height: 100px;
-  overflow-y: auto;
 }
 
 /*       detail page       */
@@ -199,6 +167,7 @@ body {
   flex: 1;
   border-radius: 4px;
   height: 4px;
+  margin-bottom: 15px;
 }
 
 .stats-wrap .progress-bar::-webkit-progress-bar {
